Update [세원] 강의 내용 정리.md

--- a/onebite-react/10월 4주차/[세원] 강의 내용 정리.md
+++ b/onebite-react/10월 4주차/[세원] 강의 내용 정리.md
@@ -1,3 +1,52 @@
+# 🎯 핵심 개념
+### Context :  컴포넌트 트리 전체에 데이터 제공할수있는  React의 기능. 
+
+
+# 📌 기존의 문제점
+### Prop Drilling
+![[Pasted image 20251018182437.png]]
+props는 부모 -> 자식으로만 데이터 전달이 가능하다. 하지만 만약에 deps가 더 깊어진다한다면, 더 깊은 deps의 컴포넌트는 부모의 상태값을 알수없게 된다. 부모의 상태를 알려면 그 부모의 자식의 자식의 자식을 통해서 상태를 전달해줘야한다. 마치 끝없이 드릴처럼 뚫고 내려간다는 의미로서 props drilling이라고 한다.
+
+그래서 대안으로 나온것이  *Context* 이다.
+Context는 부모 컴포넌트가 그 아래의 트리 전체에 데이터를 전달할 수 있도록 도와준다.
+
+그럼 context의 사용법을 알아보자.
+
+# 🛠️ Context 사용 방법 (3단계)
+
+### 1단계: Context 생성하기
+```javascript
+import { createContext } from 'react';
+
+//  컴포넌트 내부에 선언시,리렌더링 될때마다 생성되므로 컴포넌트 외부에 작성.
+export const TodoContext = createContext(); // 기본값
+
+export default function App(){
+	const [todos, dispatch] = useReducer(reducer, mockData);
+	const idRef = useRef(3);
+
+  const onCreate = useCallback((content) => {
+   ...
+  }, []);
+
+  const onUpdate = useCallback((targetId) => {
+    ...
+  }, []);
+
+  const onDelete = useCallback((targetId) => {
+    ...
+  }, []);
+
+  return (
+    <div className="App">
+      <Header />
+        <Editor />
+        <List />
+    </div>
+  );
+}
+```
+
 2단계: Context 제공
 ```javascript
 import { createContext } from 'react';
@@ -364,8 +413,3 @@ function Header() {
 ```
 
 
-
-Context = "어디서든 접근 가능하게"
-useReducer = "복잡한 상태 업데이트를 체계적으로"
-
-Context + useReducer = "전역 상태 관리 시스템 (간단한 Redux)"
