나머지 섹션 내용 추가

--- a/onebite-typescript/11월 2주차/[최권진] 강의 내용 정리.md
+++ b/onebite-typescript/11월 2주차/[최권진] 강의 내용 정리.md
@@ -178,7 +178,7 @@ let str = func('10'); // 이때의 str 변수는 string 타입으로 추론
         return result;
     }
 
-    _map([1,2,3], v => v * 2);
+    _map([1,2,3], v => String(v) );
     _map(['123', '1234'], v => parseInt(v));
     ```
     - map 함수는 arr과 callback 함수를 매개변수로 받는다. arr이 number[]타입이라면 callback 함수의 item은 number 타입을 가진다. 즉 arr: T[]을 가지고, item: T를 가지게 된다. 또, map 함수는 타입 변수를 두 개 가져야하는데 그 이유는 반환값의 타입은 arr타입과 다를 수 있기 떄문이다. 따라서 반환값 타입은 또 다른 타입 변수인 U로 지정해야 한다.
@@ -401,7 +401,7 @@ promise.then((res) => {
     - 즉, 타입변수 T를 지정해주지 않으면 unknown 타입으로 추론되는 것이다. number 타입으로 추론하게 하려면 new Promise<number>.. 와 같이 타입변수를 지정해주면 res가 number로 정확하게 추론된다.
 - 이제 프로미스가 실패할 때를 살펴보자
     ```ts
-    const promise = new Promise((resolve, reject) => {
+    const promise = new Promis<number>((resolve, reject) => {
         setTimeout(() => {
             reject('~~때문에 실패');
         }, 3000);
@@ -692,4 +692,265 @@ let c: StringNumberSwitch<number | string>; // c의 타입은 number | string
  
 ## section 10
 
+### 유틸리티 타입
+- 제네릭, 맵드 타입, 조건부 타입 등의 타입 조작 기능을 이용해 실무에서 자주 사용되는 타입을 미리 만들어 놓은 것
+
+    #### Partial<T>
+    - 특정 객체 타입의 모든 프로퍼티를 선택적 프로퍼티로 바꿔주는 타입
+    ```ts
+    interface Post {
+        title: string;
+        tags: string[];
+        content: string;
+        thumbnailURL?: string;
+    }
+
+    const draft: Partial<Post> = {
+        title: '임시글1',
+        conetent: '초안...',
+    }
+    ```
+    - 이와 같이 임시 저장된 글을 표현하는 draft 객체가 있을 때, 이 글은 아직 미완성 글이기 때문에 content, thumbnailURL과 같은 데이터가 없다. draft는 Post 타입을 사용해야하는데 이때 content가 없어서 에러가 나기에 모든 프로퍼티를 선택적 프로퍼티로 바꿔주는 Partial을 사용할 수 있다. Partial<Post>와 같은 형태로 작성하면 타입 변수로 전달한 Post의 모든 프로퍼티는 선택적 프로퍼티가 된다.
+    - Partial 타입은 다음과 같이 구현할 수 있다.
+        ```ts
+        type Partial<T> = {
+            [key in keyof T]?: T[key];
+        };
+        ```
+        - 여기서 keyof 연산은 특정 객체 타입으로부터 모든 키를 유니온 타입으로 추출한다. 즉, 타입변수 T가 Post라면 keyof T는 'title |  tags | content | thumbnailURL'이 된다. 또 in 연산자는 왼쪽의 key가 오른쪽의 유니온 타입에 하나씩 매핑이 된다. 따라서 Post 타입의 프로퍼티 키를 하나씩 추출하는 것이다. 이를 각 프로퍼티 키의 결과값으로 그대로 매핑하되 선택적 프로퍼티로 적용하여 매핑하는 원리이다.
+
+    #### Required<T>
+    - 특정 객체 타입의 모든 프로퍼티를 필수 프로퍼티로 바꿔주는 타입
+
+    ```ts
+    const withThubnailPost: Required<Post> = {
+        title: '게시글1',
+        tags: ['ts'],
+        content: '게시글1 내용',
+        thumbnailURL: 'https://...',
+    }
+    ```
+    - 위의 withThubnailPost은 썸네일이 포함된 글을 표현하는 객체이다. 이 객체는 반드시 thumbnailURL을 가지고 있어야하는데 Post타입에서는 선택적 프로퍼티로 적용되어있다. 이를 위해 모든 프로퍼티를 필수 프로퍼티로 바꿔주는 Required<Post>를 사용할 수 있다. 동작 원리는 Partial과 동일하다.
+        ```ts
+        type Required<T> = {
+            [key in keyof T]-?: T[key];
+        };
+        ```
+        - -? 는 ?로 선택적 프로퍼티인 프로퍼티에서 ?를 빼겠다는 말이다. (즉 선택적 프로퍼티 해제와 같음) 타입스크립트의 매핑된 타입에서는 프로퍼티 한정자를 제거하거나 추가할 수 있다.
+            - +? 또는 ?: 는 선택적 한정자 추가 (Partial<T>에서 사용)
+            - -?: 선택적 한정자 제거 (선태적 -> 필수로 변환)
+            - -readonly: 읽기 전용 한정자 제거
+
+    #### Readonly<T>
+    - 특정 객체 타입에서 모든 프로퍼티를 읽기 전용 프로퍼티로 만들어주는 타입
+
+    ```ts
+    const readonlyPost: Readonly<Post> = {
+        title: '보호된 게시글',
+        tags: ['ts'],
+        content:'123',
+    };
+
+    readonlyPost.title = '수정'; // 에러 
+    ```
+    - readonlyPost와 같이 수정이 불가능한 게시글이 있다면 Readonly<Post>와 같이 사용할 수 있다. Post의 모든 프로퍼티를 readonly로 만들어준다.
+        ```ts
+        type Readonly<T> = {
+            readonly [key in keyof T]: T[key];
+        };
+        ```
+        - 위 Partial, Required와 동작 원리를 동일하다. 앞의 readonly 키워드만 붙었다.
+
+    #### Pick<T, K>
+    - 객체 타입으로부터 특정 프로퍼티만 딱 골라내는 타입
+    ```ts
+    const legacyPost: Pick<Post, 'title' | 'content'> = {
+        title: '태그 기능이 없던 시절 만들어진 게시글',
+        content: '123',
+    }
+    ```
+    - Pick을 사용하면 위와 같이 Post 타입에서 title, content타입만 적용된 타입을 legacyPost 객체의 타입으로 지정해줄 수 있다. 동작원리는 다음과 같다.
+        ```ts
+        type Pick<T, K extends keyof T> = {
+            [key in K]: T[key]; 
+        }
+        ```
+        - 이 코드에서 K에 있는 속성 이름들이 실제로 T 타입에 존재하는지 확신할 수 없기에 K extends keyof T를 통해 K가 반드시 T 타입의 키들의 부분 집합이어야 함을 명시해야 오류가 사라진다. 즉, K에 있는 타입이 T에도 있어야하기에 extends keyof T를 통해 K 타입에 제약을 걸어준 것이다.
+
+    #### Omit<T, K>
+    - 객체 타입으로부터 특정 프로퍼티를 제거한 타입
+
+    ```ts
+    const noTitlePost: Omit<Post, 'title'> = {
+        content: '제목 없는 게시글',
+        tags:['ts'],
+        thumbnailURL:'https://...',
+    }
+    ```
+    - 이제 noTitlePost객체의 타입은 Post 타입으로부터 title 타입만 제거한 타입이 된다. Pick 타입으로도 작성할 수 있지만, 제거하지 않는 프로퍼티가 많아진다면 가독성이 좋지 않아지므로 Omit 타입을 사용하는게 좋다. 동작원리는 다음과 같다.
+        ```ts
+        type Omit<T, K extends keyof T> = Pick<T, Exclude<keyof T, K>>
+
+        // T = Post, K = 'title'
+        // Pick<Post, Exclude<keyof Post, 'title'>>
+        // Pick<Post, Exclude<'title' | 'content' | 'tags' | 'thumbnialURL', 'title>>
+        // Pick<Post, 'content' | 'tags' | 'thumbnialURL'>
+        // 결과적으로 해당 타입은 Post의 'content' | 'tags' | 'thumbnialURL'만 갖게 되는 타입이 된다.
+        ```
+
+    #### Record<K, V>
+    - 키 타입이 K의 유니온 타입이고, 값 타입이 T인 객체타입을 생성하는 타입 즉, 인덱스 시그니처의 조금 더 엄격한 버전이다.
+
+    ```ts
+    type ThumbnailLegacy = {
+        large: {
+            url: string;
+            size: number;
+        },
+        medium: {
+            url: string;
+            size: number;
+        },
+        small: {
+            url: string;
+            size: number;
+        },
+        watch: {
+            url: string;
+            size: number;
+        },
+        ...: {
+            ...
+        }
+    }
+
+    type Thumbnail = Record<'large' | 'medium' | 'small' | 'watch', {url: string, size: number}>
+    ```
+    - 이처럼 인덱스 시그니처와 같이 K, 즉, 프로퍼티 키와, V, 해당 키가 가질 타입을 지정해주면 형식에 맞는 타입이 생성된다. Thumbnail과 ThumbnailLegacy은 같은 코드이다. 동작 원리는 다음과 같다.
+        ```ts
+        type Record<K extends keyof any, V> = {
+            [key in K]: V
+        }
+        ```
+        - 해당 K에는 extends keyof any가 있는데 이것은 어떤 객체 타입의 키를 추출한 유니온 타입이라고 말해주는 것이다. 따라서 그 추출한 유니온 타입 K:V 형태와 같이 인덱스 시그니처 형태로 정의해줄 수 있다.
+
+    #### Exclude<T, U>
+    - T에서 U를 제거하는 타입
+    
+    ```ts
+    type A = Exclude<string | boolean, boolean>;
+    ```
+    - 이처럼 해당 string | boolean 유니온 타입에서 boolean 타입만 제거하는 것이다. A 타입은 string이 된다. 동작원리는 다음과 같다.
+        ```ts
+        type Exclude<T, U> = T extends U ? never : T;
+        // 1단계
+        // Exclude<string, boolean>
+        // Exclude<boolean, boolean>
+
+        // 2단계
+        // string |
+        // never
+
+        // 최종적으로는
+        // string | never 
+        // -> string
+        ```
+
+    #### Extrack
+    - T에서 U를 추출하는 타입
+
+    ```ts
+    type B = Extract<string, boolean, boolean>;
+    ```
+    - 여기서 B 타입은 boolean 타입이 된다. 동작원리는 다음과 같다.
+        ```ts
+        type Extract<T, U> = T extends U ? T : never;
+        ```
+
+    #### Return Type
+    - 함수의 반환값 타입을 추출하는 타입
+
+    ```ts
+    function funcA() {
+        return 'hello';
+    }
+
+    function funcB() {
+        return 10;
+    }
+
+    type ReturnA = ReturnType<typeof funcA>
+    type ReturnB = ReturnType<typeof funcB>
+    ```
+
+    - 여기서 ReturnA는 funcA의 반환값 타입인 string 타입이 되고, ReturnB는 funcB의 반환값 타입인 number 타입이 된다. 동작원리는 다음과 같다.
+
+        ```ts
+        type ReturnType<T extends (...args: any) => any> = T extends (...args: any) => inter R ? R : never;
+        ```
+        - 여기서 T는 반드시 함수 타입이어야 한다는 제약 조건이 붙는다. 어떤 타입이든 반환하는 함수 타입이어야 함을 의미한다. 그리고 T가 infer R이 추론한 타입을 확장하도록 제약한다. 즉, infer R을 통해 T가 () => string이라면 R은 string으로 추론하는데, 이때 조건이 참이면 string, 거짓이면 never 타입을 반환하는 것이다. 즉, typeof funcA가 T가 되는데 이때 T는 () => string이 된다. 그리고 이걸 추론하는 R은 string이 되어서 결과적으로 ReturnA는 string 타입이 된다.
+
 ## section 11
+
+### 타입스크립트 리액트 시작하기
+
+- 타입스크립트를 리액트 프로젝트에 적용할 때는 다음과 같은 tsconfig.json 설정이 필요하다.
+
+```json
+{
+  "compilerOptions": {
+    // 1. React 필수 설정
+    "jsx": "react-jsx", // 또는 "react" (레거시)
+    "lib": ["dom", "dom.iterable", "esnext"], 
+    "esModuleInterop": true,
+    
+    // 2. 모듈 및 코드 생성
+    "module": "esnext", // 모듈 시스템을 ES Modules로 지정
+    "target": "es2020", // 목표 JS 버전 (현대 브라우저 기준)
+    "moduleResolution": "node", // 모듈 해석 방식 (Webpack, Vite 등 Node 생태계에 맞춰 설정)
+    "allowSyntheticDefaultImports": true, // 기본 내보내기가 없는 모듈에서 기본 가져오기를 허용
+    
+    // 3. 타입 검사 및 엄격성
+    "strict": true, // 모든 엄격한 타입 검사 옵션을 활성화 (권장)
+    "skipLibCheck": true, // 라이브러리(.d.ts) 파일의 타입 검사를 건너뜀 (속도 향상)
+    "forceConsistentCasingInFileNames": true, // 파일명 대소문자 일치 강제
+    
+    // 4. 출력 및 파일 지정
+    "outDir": "./dist", // 컴파일된 JS 파일이 저장될 디렉터리 (필요하다면)
+    "rootDir": "./src" // 소스 파일이 있는 루트 디렉터리
+  },
+  "include": ["src/**/*"], // 컴파일에 포함할 파일 경로 지정
+  "exclude": ["node_modules", "dist"] // 컴파일에서 제외할 파일 경로 지정
+}
+```
+
+- 요즘에는 vite로 프로젝트를 구성해서 tsconfig.json를 직접 건드리는일이 없었는데, js로 되어있는 프로젝트를 타입스크립트로 마이그레이션 할 때 알아두면 좋을 것 같다. 필수 설정은 다음과 같다.
+
+- jsx: 'react-jsx' -> 이 설정은 import React from 'react' 없이도 jsx 코드를 사용할 수 있게 해준다.
+- lib: [...] -> 이 설정은 React가 브라우저에서 실행되므로 DOM API 타입을 인식할 수 있도록 'dom'을 반드시 포함해야 한다.
+- strict: true -> 타입 안정성을 위해 대부분의 경우 무조건 활성화하는 것을 권장한다.
+
+### 상태관리와 Props
+
+#### useState
+- useState는 리액트에서 상태관리를 위해 필요한 훅이다. 해당 훅은 아래와 같이 사용한다.
+```tsx
+const [state, setState] = useState();
+```
+- 하지만 이렇게는 tsx파일에서 오류가 발생한다. useState에 초기값이 없기 때문인데, 마땅히 설정할 기본값이 없다면 이때는 useState<string>(); 과 같은 방식으로 타입 변수를 제네릭 형태로 넘겨줘야 한다. useState의 타입은 제네릭으로 구현되어있기 때문이다. 하지만 그렇게 되면 string | undefined 로 타입을 추론하기 때문에 초기값으로 어떤 값이든 넣는게 더 좋은 방식이다. 이유는 불필요한 undefined 체크를 피할 수 있어서 코드를 더 간결하고 안전하게 만들기 때문이다.
+```tsx
+const [state, setState] = useState(); // bad, error
+const [state, setState] = useState<string>(); // not bad
+const [state, setState] = useState(""); // good
+```
+
+#### onChange와 같은 이벤트 객체 타입
+- 리액트에서는 이벤트객체 타입을 가져다 사용할 수 있다. 따라서 다음과 같이 작성할 수 있다.
+
+```tsx
+const [text, setText] = useState("");
+
+const handleChangeInput = (e: React.ChangeEvent<HTMLInputElement>) => {
+    setText(e.target.value);
+}
+```
